Adding in the configuration file and spec in openapi.yaml, adding singleton for parsing the configuration (Configuraiton.java) and Adding the classes for ConnectionServer and ConnectionServiceInterface.
